--- a/blog/2024-01-19-python-sdk-1-0.md
+++ b/blog/2024-01-19-python-sdk-1-0.md
@@ -12,9 +12,9 @@ You can update to the latest version of the BAV Python SDK by running the follow
 pip install --update wpp-bavapi
 ```
 
-The latest version of `wpp-bavapi` includes new supported endpoints, new features and many bug fixes.
+The latest version of the SDK includes new supported endpoints, new features and many bug fixes.
 
-After the `v1.0` release, we will now enter a more maintenance-focused stage of development for `wpp-bavapi`.
+After the `v1.0` release, we will now enter a more maintenance-focused stage of development.
 
 However, the package will continue to be updated with bug and security fixes, as well as with support for changes and additions to the BAV API.
 
