--- a/blog/2024-01-19-python-sdk-1-0.md
+++ b/blog/2024-01-19-python-sdk-1-0.md
@@ -26,7 +26,7 @@ Here are some highlights since our last announcement:
 
 - :tada: Full support for many more [endpoints](../docs/2.x/developer-tools/python/endpoints), and more [versatility](../docs/2.x/developer-tools/python/basic-usage#using-query-objects) for performing endpoint requests.
 - :rocket: `bavapi` requests should now be faster and more reliable, thanks to various improvements in the requests and parsing logic.
-- :sparkles: New [error handling](../docs/2.x/developer-tools/python/basic-usage#error-handling) behavior. If a page fails to download, `bavapi` will now warn the user about the missing pages rather than raise an exception.
+- :sparkles: New [error handling](../docs/2.x/developer-tools/python/basic-usage#error-handling) behavior. If a page fails to download, `bavapi` will now warn the user about the missing pages instead of raising an exception. You can change this behavior with the `on_errors` argument.
 - :notebook: Improved [SDK documentation](../docs/2.x/developer-tools/python) and updated with the latest features and functionality.
 - :bug: Fixed various issues with validation, data parsing and pagination.
 
