fix upgrade command

--- a/blog/2024-01-19-python-sdk-1-0.md
+++ b/blog/2024-01-19-python-sdk-1-0.md
@@ -6,28 +6,24 @@ authors: nachomaiz
 
 :tada: We are excited to announce the release of the `v1.0` (stable) version of the BAV Python SDK!
 
-You can update to the latest version of the BAV Python SDK by running the following command:
-
-```shell
-pip install --update wpp-bavapi
-```
-
 The latest version of the SDK includes new supported endpoints, new features and many bug fixes.
 
-After the `v1.0` release, we will now enter a more maintenance-focused stage of development.
+To update to the latest version of the BAV Python SDK, run the following command:
 
-However, the package will continue to be updated with bug and security fixes, as well as with support for changes and additions to the BAV API.
+```shell
+pip install --upgrade wpp-bavapi
+```
 
 :::tip Issues and feature requests
-If you ever encounter any bugs while using the SDK, or if you have any suggestions/requests for new features, we encourage you to open a new issue on [GitHub](https://github.com/wppbav/bavapi-sdk-python/issues/new/choose).
+If you encounter any bugs while using the SDK, or if you have any suggestions/requests for new features, we encourage you to open a new issue on [GitHub](https://github.com/wppbav/bavapi-sdk-python/issues/new/choose).
 :::
 
-Here are some highlights since our last announcement:
+Some highlights since our last announcement:
 
 - :tada: Full support for many more [endpoints](../docs/2.x/developer-tools/python/endpoints), and more [versatility](../docs/2.x/developer-tools/python/basic-usage#using-query-objects) for performing endpoint requests.
-- :rocket: `bavapi` requests should now be faster and more reliable, thanks to various improvements in the requests and parsing logic.
-- :sparkles: New [error handling](../docs/2.x/developer-tools/python/basic-usage#error-handling) behavior. If a page fails to download, `bavapi` will now warn the user about the missing pages instead of raising an exception. You can change this behavior with the `on_errors` argument.
+- :rocket: `bavapi` requests should now be faster and more reliable, thanks to various improvements in the requests and response parsing logic.
+- :sparkles: New [error handling](../docs/2.x/developer-tools/python/basic-usage#error-handling) behavior. If a page fails to download, `bavapi` will now warn the user about the missing pages instead of raising an exception. You can change this by using `on_errors="raise"` in endpoint calls.
 - :notebook: Improved [SDK documentation](../docs/2.x/developer-tools/python) and updated with the latest features and functionality.
 - :bug: Fixed various issues with validation, data parsing and pagination.
 
-Check out the releases page on [GitHub](https://github.com/wppbav/bavapi-sdk-python/releases) for a detailed changelog.
+Read the detailed changelog on [GitHub](https://github.com/wppbav/bavapi-sdk-python/releases).
