--- a/blog/2023-02-12-version-2-0.md
+++ b/blog/2023-02-12-version-2-0.md
@@ -23,4 +23,4 @@ At a high-level, these are the changes that will affect you:
 - Ability to scope API keys to specific operations.
 
 If you are having problems with using the API, or if you have any questions or feedback,
-please [do reach out to us](mailto:support@bernskioldmedia.com). We are happy to help.
+please [do reach out to us](mailto:support@bernskiold.com). We are happy to help.
